# cursor-share-rs

./: Dockerfile  Makefile
api/: Cargo.toml  Dockerfile  docker-compose.yaml
api/k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
api/src/: main.rs  server.rs
frontend/: package.json
frontend/src/: constants.ts
frontend/src/atoms/: index.ts
frontend/src/components/ChatWindow/: ChatWindow.module.scss  index.tsx
frontend/src/components/ChatWindow/components/ChatWindowHistory/: index.tsx
frontend/src/components/ChatWindow/components/ChatWindowInput/: index.tsx
frontend/src/components/ChatWindow/components/ChatWindowStatus/: index.tsx
frontend/src/components/ChatWindow/components/Cursor/: Cursor.module.css  index.tsx
frontend/src/components/MouseMoveSender/: index.tsx
frontend/src/hooks/: useChatWebSocket.ts
k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
src/: main.rs  server.rs
static/: websocket.html
ui/: Dockerfile  package.json
ui/src/: App.tsx  constants.ts  index.scss
ui/src/atoms/: chat.ts  cursor.ts  index.ts
ui/src/components/ChatWindow/: index.tsx
ui/src/components/ChatWindow/components/ChatWindowHistory/: index.tsx
