[package]
name = "cursor-share-rs"
version = "0.1.0"
authors = ["Brennon Loveless <brennon.loveless@gmail.com>"]
edition = "2018"

[dependencies]
actix-web="4.0.0-beta.3" # duh
actix-web-actors="4.0.0-beta.2" # actors specific to web
actix = "0.11.0-beta.2" # actors
uuid = { version = "0.8", features = ["v4", "serde"] }
actix-files = "0.6.0-beta.2"
env_logger = "0.8.3"
serde = "1.0.123"
serde_json = "1.0.62"
